_generated-doc/3.20/config/quarkus-core_quarkus.log.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-log-metrics-enabled]] [.property-path]##link:#quarkus-core_quarkus-log-metrics-enabled[`quarkus.log.metrics.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.metrics.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If enabled and a metrics extension is present, logging metrics are published.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-log-min-level]] [.property-path]##link:#quarkus-core_quarkus-log-min-level[`quarkus.log.min-level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.min-level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The default minimum log level.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_MIN_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_MIN_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://javadoc.io/doc/org.jboss.logmanager/jboss-logmanager/latest/org/jboss/logmanager/Level.html[Level]
|`DEBUG`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-log-decorate-stacktraces]] [.property-path]##link:#quarkus-core_quarkus-log-decorate-stacktraces[`quarkus.log.decorate-stacktraces`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.decorate-stacktraces+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
This will decorate the stacktrace in dev mode to show the line in the code that cause the exception


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_DECORATE_STACKTRACES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_DECORATE_STACKTRACES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-core_quarkus-log-level]] [.property-path]##link:#quarkus-core_quarkus-log-level[`quarkus.log.level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log level of the root category, which is used as the default log level for all categories.
<p>
JBoss Logging supports Apache-style log levels:
<p>
* {@link org.jboss.logmanager.Level#FATAL}
* {@link org.jboss.logmanager.Level#ERROR}
* {@link org.jboss.logmanager.Level#WARN}
* {@link org.jboss.logmanager.Level#INFO}
* {@link org.jboss.logmanager.Level#DEBUG}
* {@link org.jboss.logmanager.Level#TRACE}

In addition, it also supports the standard JDK log levels.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://javadoc.io/doc/org.jboss.logmanager/jboss-logmanager/latest/org/jboss/logmanager/Level.html[Level]
|`INFO`

a| [[quarkus-core_quarkus-log-handlers]] [.property-path]##link:#quarkus-core_quarkus-log-handlers[`quarkus.log.handlers`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handlers+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The names of additional handlers to link to the root category. These handlers are defined in consoleHandlers, fileHandlers, or syslogHandlers.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLERS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

h|[[quarkus-core_section_quarkus-log-category]] [.section-name.section-level0]##link:#quarkus-core_section_quarkus-log-category[Minimum logging categories]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-log-category-categories-min-level]] [.property-path]##link:#quarkus-core_quarkus-log-category-categories-min-level[`quarkus.log.category."categories".min-level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.category."categories".min-level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The minimum log level for this category. By default, all categories are configured with `DEBUG` minimum level.

To get runtime logging below `DEBUG`, e.g., `TRACE`, adjust the minimum level at build time. The right log level needs to be provided at runtime.

As an example, to get `TRACE` logging, minimum level needs to be at `TRACE`, and the runtime log level needs to match that.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CATEGORY__CATEGORIES__MIN_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CATEGORY__CATEGORIES__MIN_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|InheritableLevel
|`inherit`

a| [[quarkus-core_quarkus-log-category-categories-level]] [.property-path]##link:#quarkus-core_quarkus-log-category-categories-level[`quarkus.log.category."categories".level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.category."categories".level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log level for this category.

Note that to get log levels below `INFO`, the minimum level build-time configuration option also needs to be adjusted.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CATEGORY__CATEGORIES__LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CATEGORY__CATEGORIES__LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|InheritableLevel
|`inherit`

a| [[quarkus-core_quarkus-log-category-categories-handlers]] [.property-path]##link:#quarkus-core_quarkus-log-category-categories-handlers[`quarkus.log.category."categories".handlers`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.category."categories".handlers+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The names of the handlers to link to this category.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CATEGORY__CATEGORIES__HANDLERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CATEGORY__CATEGORIES__HANDLERS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-core_quarkus-log-category-categories-use-parent-handlers]] [.property-path]##link:#quarkus-core_quarkus-log-category-categories-use-parent-handlers[`quarkus.log.category."categories".use-parent-handlers`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.category."categories".use-parent-handlers+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specify whether this logger should send its output to its parent Logger


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CATEGORY__CATEGORIES__USE_PARENT_HANDLERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CATEGORY__CATEGORIES__USE_PARENT_HANDLERS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`


h|[[quarkus-core_section_quarkus-log-console]] [.section-name.section-level0]##link:#quarkus-core_section_quarkus-log-console[Console logging]##
h|Type
h|Default

a| [[quarkus-core_quarkus-log-console-enable]] [.property-path]##link:#quarkus-core_quarkus-log-console-enable[`quarkus.log.console.enable`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.enable+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If console logging should be enabled


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_ENABLE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-core_quarkus-log-console-stderr]] [.property-path]##link:#quarkus-core_quarkus-log-console-stderr[`quarkus.log.console.stderr`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.stderr+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If console logging should go to `System++#++err` instead of `System++#++out`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_STDERR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_STDERR+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-console-format]] [.property-path]##link:#quarkus-core_quarkus-log-console-format[`quarkus.log.console.format`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log format. Note that this value is ignored if an extension is present that takes control of console formatting (e.g., an XML or JSON-format extension).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_FORMAT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`

a| [[quarkus-core_quarkus-log-console-level]] [.property-path]##link:#quarkus-core_quarkus-log-console-level[`quarkus.log.console.level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The console log level.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://javadoc.io/doc/org.jboss.logmanager/jboss-logmanager/latest/org/jboss/logmanager/Level.html[Level]
|`ALL`

a| [[quarkus-core_quarkus-log-console-darken]] [.property-path]##link:#quarkus-core_quarkus-log-console-darken[`quarkus.log.console.darken`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.darken+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specify how much the colors should be darkened. Note that this value is ignored if an extension is present that takes control of console formatting (e.g., an XML or JSON-format extension).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_DARKEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_DARKEN+++`
endif::add-copy-button-to-env-var[]
--
|int
|`0`

a| [[quarkus-core_quarkus-log-console-filter]] [.property-path]##link:#quarkus-core_quarkus-log-console-filter[`quarkus.log.console.filter`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.filter+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the filter to link to the console handler.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_FILTER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-console-async]] [.property-path]##link:#quarkus-core_quarkus-log-console-async[`quarkus.log.console.async`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.async+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Indicates whether to log asynchronously


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_ASYNC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_ASYNC+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-console-async-queue-length]] [.property-path]##link:#quarkus-core_quarkus-log-console-async-queue-length[`quarkus.log.console.async.queue-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.async.queue-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The queue length to use before flushing writing


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_ASYNC_QUEUE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_ASYNC_QUEUE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|int
|`512`

a| [[quarkus-core_quarkus-log-console-async-overflow]] [.property-path]##link:#quarkus-core_quarkus-log-console-async-overflow[`quarkus.log.console.async.overflow`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.async.overflow+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_ASYNC_OVERFLOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_ASYNC_OVERFLOW+++`
endif::add-copy-button-to-env-var[]
--
a|`block`, `discard`
|`block`


h|[[quarkus-core_section_quarkus-log-file]] [.section-name.section-level0]##link:#quarkus-core_section_quarkus-log-file[File logging]##
h|Type
h|Default

a| [[quarkus-core_quarkus-log-file-enable]] [.property-path]##link:#quarkus-core_quarkus-log-file-enable[`quarkus.log.file.enable`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.enable+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If file logging should be enabled


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ENABLE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-file-format]] [.property-path]##link:#quarkus-core_quarkus-log-file-format[`quarkus.log.file.format`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log format


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_FORMAT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %h %N[%i] %-5p [%c{3.}] (%t) %s%e%n`

a| [[quarkus-core_quarkus-log-file-level]] [.property-path]##link:#quarkus-core_quarkus-log-file-level[`quarkus.log.file.level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The level of logs to be written into the file.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://javadoc.io/doc/org.jboss.logmanager/jboss-logmanager/latest/org/jboss/logmanager/Level.html[Level]
|`ALL`

a| [[quarkus-core_quarkus-log-file-path]] [.property-path]##link:#quarkus-core_quarkus-log-file-path[`quarkus.log.file.path`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the file in which logs will be written.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_PATH+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/File.html[File]
|`quarkus.log`

a| [[quarkus-core_quarkus-log-file-filter]] [.property-path]##link:#quarkus-core_quarkus-log-file-filter[`quarkus.log.file.filter`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.filter+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the filter to link to the file handler.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_FILTER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-file-encoding]] [.property-path]##link:#quarkus-core_quarkus-log-file-encoding[`quarkus.log.file.encoding`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.encoding+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The character encoding used


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ENCODING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ENCODING+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/nio/charset/Charset.html[Charset]
|

a| [[quarkus-core_quarkus-log-file-async]] [.property-path]##link:#quarkus-core_quarkus-log-file-async[`quarkus.log.file.async`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.async+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Indicates whether to log asynchronously


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ASYNC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ASYNC+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-file-async-queue-length]] [.property-path]##link:#quarkus-core_quarkus-log-file-async-queue-length[`quarkus.log.file.async.queue-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.async.queue-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The queue length to use before flushing writing


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ASYNC_QUEUE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ASYNC_QUEUE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|int
|`512`

a| [[quarkus-core_quarkus-log-file-async-overflow]] [.property-path]##link:#quarkus-core_quarkus-log-file-async-overflow[`quarkus.log.file.async.overflow`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.async.overflow+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ASYNC_OVERFLOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ASYNC_OVERFLOW+++`
endif::add-copy-button-to-env-var[]
--
a|`block`, `discard`
|`block`

a| [[quarkus-core_quarkus-log-file-rotation-enabled]] [.property-path]##link:#quarkus-core_quarkus-log-file-rotation-enabled[`quarkus.log.file.rotation.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.rotation.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether log rotation is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-core_quarkus-log-file-rotation-max-file-size]] [.property-path]##link:#quarkus-core_quarkus-log-file-rotation-max-file-size[`quarkus.log.file.rotation.max-file-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.rotation.max-file-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum log file size, after which a rotation is executed. Note that the file is rotated _after_ the log record is written. Thus, this isn't a hard maximum on the file size; rather, it's a hard _minimum_ on the size of the file before it is rotated.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_MAX_FILE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_MAX_FILE_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-quarkus-core_quarkus-log[icon:question-circle[title=More information about the MemorySize format]]
|`10M`

a| [[quarkus-core_quarkus-log-file-rotation-max-backup-index]] [.property-path]##link:#quarkus-core_quarkus-log-file-rotation-max-backup-index[`quarkus.log.file.rotation.max-backup-index`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.rotation.max-backup-index+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum number of backups to keep.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_MAX_BACKUP_INDEX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_MAX_BACKUP_INDEX+++`
endif::add-copy-button-to-env-var[]
--
|int
|`5`

a| [[quarkus-core_quarkus-log-file-rotation-file-suffix]] [.property-path]##link:#quarkus-core_quarkus-log-file-rotation-file-suffix[`quarkus.log.file.rotation.file-suffix`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.rotation.file-suffix+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The file handler rotation file suffix. When used, the file will be rotated based on its suffix.

The suffix must be in a date-time format that is understood by `DateTimeFormatter`.

Example fileSuffix: .yyyy-MM-dd

Note: If the suffix ends with .zip or .gz, the rotation file will also be compressed.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_FILE_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_FILE_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-file-rotation-rotate-on-boot]] [.property-path]##link:#quarkus-core_quarkus-log-file-rotation-rotate-on-boot[`quarkus.log.file.rotation.rotate-on-boot`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.rotation.rotate-on-boot+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Indicates whether to rotate log files on server initialization.

You need to either set a `max-file-size` or configure a `file-suffix` for it to work.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_ROTATE_ON_BOOT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_ROTATE_ON_BOOT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`


h|[[quarkus-core_section_quarkus-log-syslog]] [.section-name.section-level0]##link:#quarkus-core_section_quarkus-log-syslog[Syslog logging]##
h|Type
h|Default

a| [[quarkus-core_quarkus-log-syslog-enable]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-enable[`quarkus.log.syslog.enable`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.enable+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If syslog logging should be enabled


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_ENABLE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-syslog-endpoint]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-endpoint[`quarkus.log.syslog.endpoint`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.endpoint+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The IP address and port of the Syslog server


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--
|host:port
|`localhost:514`

a| [[quarkus-core_quarkus-log-syslog-app-name]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-app-name[`quarkus.log.syslog.app-name`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.app-name+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The app name used when formatting the message in RFC5424 format


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_APP_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_APP_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-syslog-hostname]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-hostname[`quarkus.log.syslog.hostname`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.hostname+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the host the messages are being sent from


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_HOSTNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_HOSTNAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-syslog-facility]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-facility[`quarkus.log.syslog.facility`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.facility+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Sets the facility used when calculating the priority of the message as defined by RFC-5424 and RFC-3164


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_FACILITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_FACILITY+++`
endif::add-copy-button-to-env-var[]
--
a|`kernel`, `user-level`, `mail-system`, `system-daemons`, `security`, `syslogd`, `line-printer`, `network-news`, `uucp`, `clock-daemon`, `security2`, `ftp-daemon`, `ntp`, `log-audit`, `log-alert`, `clock-daemon2`, `local-use-0`, `local-use-1`, `local-use-2`, `local-use-3`, `local-use-4`, `local-use-5`, `local-use-6`, `local-use-7`
|`user-level`

a| [[quarkus-core_quarkus-log-syslog-syslog-type]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-syslog-type[`quarkus.log.syslog.syslog-type`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.syslog-type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set the `SyslogType syslog type` this handler should use to format the message sent


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_SYSLOG_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_SYSLOG_TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|`rfc5424`, `rfc3164`
|`rfc5424`

a| [[quarkus-core_quarkus-log-syslog-protocol]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-protocol[`quarkus.log.syslog.protocol`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.protocol+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Sets the protocol used to connect to the Syslog server


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--
a|`tcp`, `udp`, `ssl-tcp`
|`tcp`

a| [[quarkus-core_quarkus-log-syslog-use-counting-framing]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-use-counting-framing[`quarkus.log.syslog.use-counting-framing`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.use-counting-framing+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If enabled, the message being sent is prefixed with the size of the message


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_USE_COUNTING_FRAMING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_USE_COUNTING_FRAMING+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-syslog-truncate]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-truncate[`quarkus.log.syslog.truncate`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.truncate+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set to `true` to truncate the message if it exceeds maximum length


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_TRUNCATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_TRUNCATE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-core_quarkus-log-syslog-block-on-reconnect]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-block-on-reconnect[`quarkus.log.syslog.block-on-reconnect`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.block-on-reconnect+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enables or disables blocking when attempting to reconnect a `Protocol++#++TCP
TCP` or `Protocol++#++SSL_TCP SSL TCP` protocol


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_BLOCK_ON_RECONNECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_BLOCK_ON_RECONNECT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-syslog-format]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-format[`quarkus.log.syslog.format`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log message format


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_FORMAT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`

a| [[quarkus-core_quarkus-log-syslog-level]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-level[`quarkus.log.syslog.level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log level specifying what message levels will be logged by the Syslog logger


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://javadoc.io/doc/org.jboss.logmanager/jboss-logmanager/latest/org/jboss/logmanager/Level.html[Level]
|`ALL`

a| [[quarkus-core_quarkus-log-syslog-filter]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-filter[`quarkus.log.syslog.filter`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.filter+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the filter to link to the file handler.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_FILTER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-syslog-max-length]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-max-length[`quarkus.log.syslog.max-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.max-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum length, in bytes, of the message allowed to be sent. The length includes the header and the message.

If not set, the default value is `2048` when `sys-log-type` is `rfc5424` (which is the default) and `1024` when `sys-log-type` is `rfc3164`


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_MAX_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_MAX_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-quarkus-core_quarkus-log[icon:question-circle[title=More information about the MemorySize format]]
|

a| [[quarkus-core_quarkus-log-syslog-async]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-async[`quarkus.log.syslog.async`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.async+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Indicates whether to log asynchronously


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_ASYNC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_ASYNC+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-syslog-async-queue-length]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-async-queue-length[`quarkus.log.syslog.async.queue-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.async.queue-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The queue length to use before flushing writing


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_ASYNC_QUEUE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_ASYNC_QUEUE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|int
|`512`

a| [[quarkus-core_quarkus-log-syslog-async-overflow]] [.property-path]##link:#quarkus-core_quarkus-log-syslog-async-overflow[`quarkus.log.syslog.async.overflow`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.async.overflow+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_ASYNC_OVERFLOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_ASYNC_OVERFLOW+++`
endif::add-copy-button-to-env-var[]
--
a|`block`, `discard`
|`block`


h|[[quarkus-core_section_quarkus-log-socket]] [.section-name.section-level0]##link:#quarkus-core_section_quarkus-log-socket[Socket logging]##
h|Type
h|Default

a| [[quarkus-core_quarkus-log-socket-enable]] [.property-path]##link:#quarkus-core_quarkus-log-socket-enable[`quarkus.log.socket.enable`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.enable+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If socket logging should be enabled


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_ENABLE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-socket-endpoint]] [.property-path]##link:#quarkus-core_quarkus-log-socket-endpoint[`quarkus.log.socket.endpoint`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.endpoint+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The IP address and port of the server receiving the logs


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--
|host:port
|`localhost:4560`

a| [[quarkus-core_quarkus-log-socket-protocol]] [.property-path]##link:#quarkus-core_quarkus-log-socket-protocol[`quarkus.log.socket.protocol`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.protocol+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Sets the protocol used to connect to the syslog server


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--
a|`tcp`, `udp`, `ssl-tcp`
|`tcp`

a| [[quarkus-core_quarkus-log-socket-block-on-reconnect]] [.property-path]##link:#quarkus-core_quarkus-log-socket-block-on-reconnect[`quarkus.log.socket.block-on-reconnect`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.block-on-reconnect+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enables or disables blocking when attempting to reconnect a `Protocol++#++TCP
TCP` or `Protocol++#++SSL_TCP SSL TCP` protocol


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_BLOCK_ON_RECONNECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_BLOCK_ON_RECONNECT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-socket-format]] [.property-path]##link:#quarkus-core_quarkus-log-socket-format[`quarkus.log.socket.format`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log message format


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_FORMAT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`

a| [[quarkus-core_quarkus-log-socket-level]] [.property-path]##link:#quarkus-core_quarkus-log-socket-level[`quarkus.log.socket.level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log level specifying, which message levels will be logged by socket logger


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://javadoc.io/doc/org.jboss.logmanager/jboss-logmanager/latest/org/jboss/logmanager/Level.html[Level]
|`ALL`

a| [[quarkus-core_quarkus-log-socket-filter]] [.property-path]##link:#quarkus-core_quarkus-log-socket-filter[`quarkus.log.socket.filter`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.filter+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the filter to link to the file handler.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_FILTER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-socket-async]] [.property-path]##link:#quarkus-core_quarkus-log-socket-async[`quarkus.log.socket.async`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.async+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Indicates whether to log asynchronously


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_ASYNC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_ASYNC+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-socket-async-queue-length]] [.property-path]##link:#quarkus-core_quarkus-log-socket-async-queue-length[`quarkus.log.socket.async.queue-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.async.queue-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The queue length to use before flushing writing


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_ASYNC_QUEUE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_ASYNC_QUEUE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|int
|`512`

a| [[quarkus-core_quarkus-log-socket-async-overflow]] [.property-path]##link:#quarkus-core_quarkus-log-socket-async-overflow[`quarkus.log.socket.async.overflow`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.async.overflow+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_ASYNC_OVERFLOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_ASYNC_OVERFLOW+++`
endif::add-copy-button-to-env-var[]
--
a|`block`, `discard`
|`block`


h|[[quarkus-core_section_quarkus-log-handler-console]] [.section-name.section-level0]##link:#quarkus-core_section_quarkus-log-handler-console[Console handlers]##
h|Type
h|Default

a| [[quarkus-core_quarkus-log-handler-console-console-handlers-enable]] [.property-path]##link:#quarkus-core_quarkus-log-handler-console-console-handlers-enable[`quarkus.log.handler.console."console-handlers".enable`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.console."console-handlers".enable+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If console logging should be enabled


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ENABLE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-core_quarkus-log-handler-console-console-handlers-stderr]] [.property-path]##link:#quarkus-core_quarkus-log-handler-console-console-handlers-stderr[`quarkus.log.handler.console."console-handlers".stderr`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.console."console-handlers".stderr+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If console logging should go to `System++#++err` instead of `System++#++out`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__STDERR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__STDERR+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-handler-console-console-handlers-format]] [.property-path]##link:#quarkus-core_quarkus-log-handler-console-console-handlers-format[`quarkus.log.handler.console."console-handlers".format`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.console."console-handlers".format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log format. Note that this value is ignored if an extension is present that takes control of console formatting (e.g., an XML or JSON-format extension).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__FORMAT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`

a| [[quarkus-core_quarkus-log-handler-console-console-handlers-level]] [.property-path]##link:#quarkus-core_quarkus-log-handler-console-console-handlers-level[`quarkus.log.handler.console."console-handlers".level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.console."console-handlers".level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The console log level.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://javadoc.io/doc/org.jboss.logmanager/jboss-logmanager/latest/org/jboss/logmanager/Level.html[Level]
|`ALL`

a| [[quarkus-core_quarkus-log-handler-console-console-handlers-darken]] [.property-path]##link:#quarkus-core_quarkus-log-handler-console-console-handlers-darken[`quarkus.log.handler.console."console-handlers".darken`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.console."console-handlers".darken+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specify how much the colors should be darkened. Note that this value is ignored if an extension is present that takes control of console formatting (e.g., an XML or JSON-format extension).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__DARKEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__DARKEN+++`
endif::add-copy-button-to-env-var[]
--
|int
|`0`

a| [[quarkus-core_quarkus-log-handler-console-console-handlers-filter]] [.property-path]##link:#quarkus-core_quarkus-log-handler-console-console-handlers-filter[`quarkus.log.handler.console."console-handlers".filter`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.console."console-handlers".filter+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the filter to link to the console handler.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__FILTER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-handler-console-console-handlers-async]] [.property-path]##link:#quarkus-core_quarkus-log-handler-console-console-handlers-async[`quarkus.log.handler.console."console-handlers".async`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.console."console-handlers".async+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Indicates whether to log asynchronously


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ASYNC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ASYNC+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-handler-console-console-handlers-async-queue-length]] [.property-path]##link:#quarkus-core_quarkus-log-handler-console-console-handlers-async-queue-length[`quarkus.log.handler.console."console-handlers".async.queue-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.console."console-handlers".async.queue-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The queue length to use before flushing writing


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ASYNC_QUEUE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ASYNC_QUEUE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|int
|`512`

a| [[quarkus-core_quarkus-log-handler-console-console-handlers-async-overflow]] [.property-path]##link:#quarkus-core_quarkus-log-handler-console-console-handlers-async-overflow[`quarkus.log.handler.console."console-handlers".async.overflow`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.console."console-handlers".async.overflow+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ASYNC_OVERFLOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ASYNC_OVERFLOW+++`
endif::add-copy-button-to-env-var[]
--
a|`block`, `discard`
|`block`


h|[[quarkus-core_section_quarkus-log-handler-file]] [.section-name.section-level0]##link:#quarkus-core_section_quarkus-log-handler-file[File handlers]##
h|Type
h|Default

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-enable]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-enable[`quarkus.log.handler.file."file-handlers".enable`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".enable+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If file logging should be enabled


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ENABLE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-format]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-format[`quarkus.log.handler.file."file-handlers".format`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log format


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__FORMAT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %h %N[%i] %-5p [%c{3.}] (%t) %s%e%n`

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-level]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-level[`quarkus.log.handler.file."file-handlers".level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The level of logs to be written into the file.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://javadoc.io/doc/org.jboss.logmanager/jboss-logmanager/latest/org/jboss/logmanager/Level.html[Level]
|`ALL`

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-path]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-path[`quarkus.log.handler.file."file-handlers".path`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the file in which logs will be written.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__PATH+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/File.html[File]
|`quarkus.log`

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-filter]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-filter[`quarkus.log.handler.file."file-handlers".filter`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".filter+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the filter to link to the file handler.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__FILTER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-encoding]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-encoding[`quarkus.log.handler.file."file-handlers".encoding`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".encoding+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The character encoding used


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ENCODING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ENCODING+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/nio/charset/Charset.html[Charset]
|

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-async]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-async[`quarkus.log.handler.file."file-handlers".async`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".async+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Indicates whether to log asynchronously


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ASYNC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ASYNC+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-async-queue-length]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-async-queue-length[`quarkus.log.handler.file."file-handlers".async.queue-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".async.queue-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The queue length to use before flushing writing


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ASYNC_QUEUE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ASYNC_QUEUE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|int
|`512`

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-async-overflow]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-async-overflow[`quarkus.log.handler.file."file-handlers".async.overflow`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".async.overflow+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ASYNC_OVERFLOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ASYNC_OVERFLOW+++`
endif::add-copy-button-to-env-var[]
--
a|`block`, `discard`
|`block`

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-rotation-enabled]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-rotation-enabled[`quarkus.log.handler.file."file-handlers".rotation.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".rotation.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether log rotation is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-rotation-max-file-size]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-rotation-max-file-size[`quarkus.log.handler.file."file-handlers".rotation.max-file-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".rotation.max-file-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum log file size, after which a rotation is executed. Note that the file is rotated _after_ the log record is written. Thus, this isn't a hard maximum on the file size; rather, it's a hard _minimum_ on the size of the file before it is rotated.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_MAX_FILE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_MAX_FILE_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-quarkus-core_quarkus-log[icon:question-circle[title=More information about the MemorySize format]]
|`10M`

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-rotation-max-backup-index]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-rotation-max-backup-index[`quarkus.log.handler.file."file-handlers".rotation.max-backup-index`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".rotation.max-backup-index+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum number of backups to keep.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_MAX_BACKUP_INDEX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_MAX_BACKUP_INDEX+++`
endif::add-copy-button-to-env-var[]
--
|int
|`5`

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-rotation-file-suffix]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-rotation-file-suffix[`quarkus.log.handler.file."file-handlers".rotation.file-suffix`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".rotation.file-suffix+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The file handler rotation file suffix. When used, the file will be rotated based on its suffix.

The suffix must be in a date-time format that is understood by `DateTimeFormatter`.

Example fileSuffix: .yyyy-MM-dd

Note: If the suffix ends with .zip or .gz, the rotation file will also be compressed.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_FILE_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_FILE_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-handler-file-file-handlers-rotation-rotate-on-boot]] [.property-path]##link:#quarkus-core_quarkus-log-handler-file-file-handlers-rotation-rotate-on-boot[`quarkus.log.handler.file."file-handlers".rotation.rotate-on-boot`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.file."file-handlers".rotation.rotate-on-boot+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Indicates whether to rotate log files on server initialization.

You need to either set a `max-file-size` or configure a `file-suffix` for it to work.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_ROTATE_ON_BOOT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_ROTATE_ON_BOOT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`


h|[[quarkus-core_section_quarkus-log-handler-syslog]] [.section-name.section-level0]##link:#quarkus-core_section_quarkus-log-handler-syslog[Syslog handlers]##
h|Type
h|Default

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-enable]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-enable[`quarkus.log.handler.syslog."syslog-handlers".enable`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".enable+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If syslog logging should be enabled


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__ENABLE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-endpoint]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-endpoint[`quarkus.log.handler.syslog."syslog-handlers".endpoint`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".endpoint+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The IP address and port of the Syslog server


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--
|host:port
|`localhost:514`

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-app-name]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-app-name[`quarkus.log.handler.syslog."syslog-handlers".app-name`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".app-name+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The app name used when formatting the message in RFC5424 format


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__APP_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__APP_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-hostname]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-hostname[`quarkus.log.handler.syslog."syslog-handlers".hostname`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".hostname+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the host the messages are being sent from


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__HOSTNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__HOSTNAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-facility]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-facility[`quarkus.log.handler.syslog."syslog-handlers".facility`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".facility+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Sets the facility used when calculating the priority of the message as defined by RFC-5424 and RFC-3164


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__FACILITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__FACILITY+++`
endif::add-copy-button-to-env-var[]
--
a|`kernel`, `user-level`, `mail-system`, `system-daemons`, `security`, `syslogd`, `line-printer`, `network-news`, `uucp`, `clock-daemon`, `security2`, `ftp-daemon`, `ntp`, `log-audit`, `log-alert`, `clock-daemon2`, `local-use-0`, `local-use-1`, `local-use-2`, `local-use-3`, `local-use-4`, `local-use-5`, `local-use-6`, `local-use-7`
|`user-level`

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-syslog-type]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-syslog-type[`quarkus.log.handler.syslog."syslog-handlers".syslog-type`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".syslog-type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set the `SyslogType syslog type` this handler should use to format the message sent


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__SYSLOG_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__SYSLOG_TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|`rfc5424`, `rfc3164`
|`rfc5424`

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-protocol]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-protocol[`quarkus.log.handler.syslog."syslog-handlers".protocol`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".protocol+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Sets the protocol used to connect to the Syslog server


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--
a|`tcp`, `udp`, `ssl-tcp`
|`tcp`

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-use-counting-framing]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-use-counting-framing[`quarkus.log.handler.syslog."syslog-handlers".use-counting-framing`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".use-counting-framing+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If enabled, the message being sent is prefixed with the size of the message


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__USE_COUNTING_FRAMING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__USE_COUNTING_FRAMING+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-truncate]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-truncate[`quarkus.log.handler.syslog."syslog-handlers".truncate`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".truncate+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set to `true` to truncate the message if it exceeds maximum length


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__TRUNCATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__TRUNCATE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-block-on-reconnect]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-block-on-reconnect[`quarkus.log.handler.syslog."syslog-handlers".block-on-reconnect`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".block-on-reconnect+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enables or disables blocking when attempting to reconnect a `Protocol++#++TCP
TCP` or `Protocol++#++SSL_TCP SSL TCP` protocol


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__BLOCK_ON_RECONNECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__BLOCK_ON_RECONNECT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-format]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-format[`quarkus.log.handler.syslog."syslog-handlers".format`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log message format


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__FORMAT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-level]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-level[`quarkus.log.handler.syslog."syslog-handlers".level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log level specifying what message levels will be logged by the Syslog logger


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://javadoc.io/doc/org.jboss.logmanager/jboss-logmanager/latest/org/jboss/logmanager/Level.html[Level]
|`ALL`

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-filter]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-filter[`quarkus.log.handler.syslog."syslog-handlers".filter`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".filter+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the filter to link to the file handler.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__FILTER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-max-length]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-max-length[`quarkus.log.handler.syslog."syslog-handlers".max-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".max-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum length, in bytes, of the message allowed to be sent. The length includes the header and the message.

If not set, the default value is `2048` when `sys-log-type` is `rfc5424` (which is the default) and `1024` when `sys-log-type` is `rfc3164`


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__MAX_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__MAX_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-quarkus-core_quarkus-log[icon:question-circle[title=More information about the MemorySize format]]
|

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-async]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-async[`quarkus.log.handler.syslog."syslog-handlers".async`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".async+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Indicates whether to log asynchronously


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__ASYNC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__ASYNC+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-async-queue-length]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-async-queue-length[`quarkus.log.handler.syslog."syslog-handlers".async.queue-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".async.queue-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The queue length to use before flushing writing


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__ASYNC_QUEUE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__ASYNC_QUEUE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|int
|`512`

a| [[quarkus-core_quarkus-log-handler-syslog-syslog-handlers-async-overflow]] [.property-path]##link:#quarkus-core_quarkus-log-handler-syslog-syslog-handlers-async-overflow[`quarkus.log.handler.syslog."syslog-handlers".async.overflow`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.syslog."syslog-handlers".async.overflow+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__ASYNC_OVERFLOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SYSLOG__SYSLOG_HANDLERS__ASYNC_OVERFLOW+++`
endif::add-copy-button-to-env-var[]
--
a|`block`, `discard`
|`block`


h|[[quarkus-core_section_quarkus-log-handler-socket]] [.section-name.section-level0]##link:#quarkus-core_section_quarkus-log-handler-socket[Socket handlers]##
h|Type
h|Default

a| [[quarkus-core_quarkus-log-handler-socket-socket-handlers-enable]] [.property-path]##link:#quarkus-core_quarkus-log-handler-socket-socket-handlers-enable[`quarkus.log.handler.socket."socket-handlers".enable`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.socket."socket-handlers".enable+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If socket logging should be enabled


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__ENABLE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-handler-socket-socket-handlers-endpoint]] [.property-path]##link:#quarkus-core_quarkus-log-handler-socket-socket-handlers-endpoint[`quarkus.log.handler.socket."socket-handlers".endpoint`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.socket."socket-handlers".endpoint+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The IP address and port of the server receiving the logs


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--
|host:port
|`localhost:4560`

a| [[quarkus-core_quarkus-log-handler-socket-socket-handlers-protocol]] [.property-path]##link:#quarkus-core_quarkus-log-handler-socket-socket-handlers-protocol[`quarkus.log.handler.socket."socket-handlers".protocol`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.socket."socket-handlers".protocol+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Sets the protocol used to connect to the syslog server


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--
a|`tcp`, `udp`, `ssl-tcp`
|`tcp`

a| [[quarkus-core_quarkus-log-handler-socket-socket-handlers-block-on-reconnect]] [.property-path]##link:#quarkus-core_quarkus-log-handler-socket-socket-handlers-block-on-reconnect[`quarkus.log.handler.socket."socket-handlers".block-on-reconnect`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.socket."socket-handlers".block-on-reconnect+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enables or disables blocking when attempting to reconnect a `Protocol++#++TCP
TCP` or `Protocol++#++SSL_TCP SSL TCP` protocol


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__BLOCK_ON_RECONNECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__BLOCK_ON_RECONNECT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-handler-socket-socket-handlers-format]] [.property-path]##link:#quarkus-core_quarkus-log-handler-socket-socket-handlers-format[`quarkus.log.handler.socket."socket-handlers".format`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.socket."socket-handlers".format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log message format


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__FORMAT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`

a| [[quarkus-core_quarkus-log-handler-socket-socket-handlers-level]] [.property-path]##link:#quarkus-core_quarkus-log-handler-socket-socket-handlers-level[`quarkus.log.handler.socket."socket-handlers".level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.socket."socket-handlers".level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The log level specifying, which message levels will be logged by socket logger


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://javadoc.io/doc/org.jboss.logmanager/jboss-logmanager/latest/org/jboss/logmanager/Level.html[Level]
|`ALL`

a| [[quarkus-core_quarkus-log-handler-socket-socket-handlers-filter]] [.property-path]##link:#quarkus-core_quarkus-log-handler-socket-socket-handlers-filter[`quarkus.log.handler.socket."socket-handlers".filter`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.socket."socket-handlers".filter+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the filter to link to the file handler.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__FILTER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-log-handler-socket-socket-handlers-async]] [.property-path]##link:#quarkus-core_quarkus-log-handler-socket-socket-handlers-async[`quarkus.log.handler.socket."socket-handlers".async`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.socket."socket-handlers".async+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Indicates whether to log asynchronously


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__ASYNC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__ASYNC+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-core_quarkus-log-handler-socket-socket-handlers-async-queue-length]] [.property-path]##link:#quarkus-core_quarkus-log-handler-socket-socket-handlers-async-queue-length[`quarkus.log.handler.socket."socket-handlers".async.queue-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.socket."socket-handlers".async.queue-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The queue length to use before flushing writing


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__ASYNC_QUEUE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__ASYNC_QUEUE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|int
|`512`

a| [[quarkus-core_quarkus-log-handler-socket-socket-handlers-async-overflow]] [.property-path]##link:#quarkus-core_quarkus-log-handler-socket-socket-handlers-async-overflow[`quarkus.log.handler.socket."socket-handlers".async.overflow`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.handler.socket."socket-handlers".async.overflow+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__ASYNC_OVERFLOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_SOCKET__SOCKET_HANDLERS__ASYNC_OVERFLOW+++`
endif::add-copy-button-to-env-var[]
--
a|`block`, `discard`
|`block`


h|[[quarkus-core_section_quarkus-log-filter]] [.section-name.section-level0]##link:#quarkus-core_section_quarkus-log-filter[Log cleanup filters - internal use]##
h|Type
h|Default

a| [[quarkus-core_quarkus-log-filter-filters-if-starts-with]] [.property-path]##link:#quarkus-core_quarkus-log-filter-filters-if-starts-with[`quarkus.log.filter."filters".if-starts-with`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.filter."filters".if-starts-with+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The message prefix to match


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILTER__FILTERS__IF_STARTS_WITH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILTER__FILTERS__IF_STARTS_WITH+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`inherit`

a| [[quarkus-core_quarkus-log-filter-filters-target-level]] [.property-path]##link:#quarkus-core_quarkus-log-filter-filters-target-level[`quarkus.log.filter."filters".target-level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.filter."filters".target-level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The new log level for the filtered message. Defaults to DEBUG.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILTER__FILTERS__TARGET_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILTER__FILTERS__TARGET_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://javadoc.io/doc/org.jboss.logmanager/jboss-logmanager/latest/org/jboss/logmanager/Level.html[Level]
|`DEBUG`


|===

ifndef::no-memory-size-note[]
[NOTE]
[id=memory-size-note-anchor-quarkus-core_quarkus-log]
.About the MemorySize format
====
A size configuration option recognizes strings in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.

If no suffix is given, assume bytes.
====
ifndef::no-memory-size-note[]
